--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             </div>
         </div>
     </section> -->
+    <h1><span id="p1display">0</span> to <span id="p2display">0</span></h1>
+    <button id="p1button">+1 Player One</button>
+    <button id="p2button">+1 Player Two</button>
+    <button id="reset">Reset</button>
 
     <script src="app.js"></script>
   </body>
